# RsLogic

./: .gitignore  .gitmodules  ARCHITECTURE.md  Intended.md  config.py  full_job_restarted.json  installer.bat  job-action-map.json  job-contract.schema.json  job-example.json  pyproject.toml  rslogic_clientctl.py  start-rslogic-client.bat  stop-rslogic-client.bat
.devcontainer/: devcontainer.json
internal_tools/: README.md
internal_tools/rstool-sdk/: .gitignore  README.md
internal_tools/rstool-sdk/src/realityscan_sdk/: __init__.py  client.py
internal_tools/rstool-sdk/src/realityscan_sdk/models/: project.py
internal_tools/rstool-sdk/src/realityscan_sdk/resources/: project.py
rslogic/: __init__.py  config.py  ingest.py  sidecar_parser.py  upload_service.py
rslogic/api/: __init__.py  app.py  schemas.py  server.py  web_models.py  web_ops.py
rslogic/api/web/: __init__.py  index.html
rslogic/api/web/static/css/: base.css  components.css  layout.css
rslogic/api/web/static/js/: api.js  app.js  images-view.js  job-builder.js  (+2 more)
rslogic/cli/: __init__.py  upload.py  upload_tui.py
rslogic/client/: __init__.py  command_client.py  control_tui.py  executor.py  file_ops.py  process_guard.py  rsnode_client.py  runtime.py  status_render.py
rslogic/common/: __init__.py  db.py  redis_bus.py  s3.py  schemas.py
rslogic/db/: __init__.py  migrate.py
rslogic/internal_tools/: README.md
rslogic/internal_tools/label-db/: .gitignore  EXAMPLE.env  README.md
rslogic/internal_tools/label-db/studio-db/: Dockerfile  alembic.ini  docker-compose.yaml  models.py  pyproject.toml  studio_db.py
rslogic/internal_tools/label-db/studio-db/migrations/: env.py  script.py.mako
rslogic/internal_tools/label-db/studio-db/migrations/versions/: 20260206_0001_init.py  20260305_0002_realityscan_jobs_schema.py  3ef61f5cfa17_autogenerate_models.py  5c775fb0037d_start.py  71e1348a584a_make_edge_handles_node_relative.py  7423fd1523d5_add_pixel_space_aoi_labels.py  7500ca4b1731_replace_dataset_id_with_image_groups.py  9eb892880372_drop_image_assets_s3_url.py  a2d4f6e9b8c1_add_rslogic_job_and_image_tables.py  b3a9ad4f2c10_add_s3_url_to_rslogic_image_assets.py  b5be93bc118d_add_image_asset_metadata_and_postgis_.py  b7912b7a0663_create_model_tables.py  b8b660afba04_add_label_edge_curve_handles.py  c0e0c2f4d9ab_merge_rslogic_jobs_and_edge_handles.py  e31fb594c8bb_unify_image_assets_and_link_project_layers.py
rslogic/internal_tools/rstool-sdk/: pyproject.toml
rslogic/internal_tools/rstool-sdk/.devcontainer/: devcontainer.json
rslogic/internal_tools/rstool-sdk/src/realityscan_sdk/: client.py
rslogic/internal_tools/rstool-sdk/src/realityscan_sdk/models/: node.py  tasks.py
rslogic/internal_tools/rstool-sdk/src/realityscan_sdk/resources/: node.py  project.py
rslogic/internal_tools/rstool-sdk/tests/: test_projects.py  test_public_api.py
rslogic/jobs/: __init__.py  command_channel.py  redis_queue.py  runners.py  service.py  worker.py
rslogic/metadata/: __init__.py  extractor.py  sidecar.py
rslogic/services/: __init__.py  ingest_preview.py  ingestion.py
rslogic/storage/: __init__.py  repository.py  s3.py  uploader.py
rslogic/tui/: __init__.py  app.py  job_builder.py  launcher.py
scripts/: create_rslogic_rsnode_client_shortcut.bat  create_rslogic_rsnode_client_shortcut.ps1  reconstruct_via_redis.py  repair_rslogic_rsnode_client.ps1  rslogic_rsnode_client.ps1  rslogic_rsnode_client.py  rsnode_watchdog.ps1  run_rslogic_client_stack.ps1  start_rslogic_rsnode_client.bat  sync_rslogic_repo.ps1
tests/: conftest.py  test_api_schemas.py  test_api_server.py  test_api_web.py  test_command_channel.py  test_command_channel_extra.py  test_command_client.py  test_config.py  test_db_migrate.py  test_executor.py  test_file_ops.py  test_ingest_service.py  test_job_builder.py  test_jobs_redis_queue.py  test_jobs_runners.py  test_jobs_service_helpers.py  test_metadata_extractor.py  test_reconstruct_via_redis.py  test_redis_bus.py  test_rsnode_client_processing.py  test_rsnode_client_script.py  test_sidecar_parser.py  test_status_render.py  test_storage_s3.py  test_tui_launcher.py  test_upload_service.py  test_web_ops.py
